[tool.poetry]
name = "ptrack"
version = "1.0.0"
description = "A Reverse and Forward DNS Lookup Tool for analyzing IP addresses from a CSV file."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
keywords = ["dns", "lookup", "network", "tool"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"  # Updated from "^3.6" to support dnspython
dnspython = "^2.6.1"

[tool.poetry.scripts]
ptrack = "ptrack:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"